# gir2jni

./: DESIGN.md  LICENSE  TODO.md  gir2jni.cabal  stack.yaml
app/: Main.hs
src/Data/GI/CodeGen/: JNI.hs
src/Data/GI/CodeGen/JNI/: Function.hs  NativeObject.hs  Object.hs  Types.hs  Utils.hs
src/Data/GI/CodeGen/JNI/Utils/: C.hs  Java.hs  Type.hs
