name:                gir2jni
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/ford-prefect/gir2jni#readme
license:             BSD3
license-file:        LICENSE
author:              Arun Raghavan
maintainer:          arun@arunraghavan.net
copyright:           2016 Arun Raghavan
category:            Code Generation
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.GI.CodeGen.JNI
  other-modules:       Data.GI.CodeGen.JNI.Types
                     , Data.GI.CodeGen.JNI.Utils
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , text
                     , filepath
                     , language-java
                     , language-c
                     , haskell-gi
  default-language:    Haskell2010

executable gir2jni-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , gir2jni
                     , containers
                     , text
                     , filepath
                     , directory
                     , optparse-applicative
                     , haskell-gi
  default-language:    Haskell2010

test-suite gir2jni-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , gir2jni
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ford-prefect/gir2jni
